force-app/main/default/objects/ActivePanel__c/ActivePanel__c.object-meta.xml
<CustomObject>
    <label>ActivePanel</label>
    <nameField>
        <label>ActivePanel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ActivePanel</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>