force-app/main/default/objects/ActivePanel__c/fields/Hiring_Panel__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Panel__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Hiring Panel</label>
    <referenceTo>HiringPanel__c</referenceTo>
    <relationshipLabel>ActivePanel</relationshipLabel>
    <relationshipName>ActivePanel</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>