force-app/main/default/objects/ActivePanel__c/fields/InterviewEvent__c.field-meta.xml
<CustomField>
    <fullName>InterviewEvent__c</fullName>
    <label>Interview Event</label>
    <referenceTo>InterviewEvent__c</referenceTo>
    <relationshipLabel>Active Panel</relationshipLabel>
    <relationshipName>ActivePanel</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>