force-app/main/default/objects/ActivePanel__c/fields/OrganisingCommitteeHiringPanel__c.field-meta.xml
<CustomField>
    <fullName>OrganisingCommitteeHiringPanel__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>OrganisingCommitteeHiringPanel</label>
    <referenceTo>OrganisingCommitteeHiringPanel__c</referenceTo>
    <relationshipLabel>ActivePanel</relationshipLabel>
    <relationshipName>ActivePanel</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>